gcc/testsuite/rust/rustc/ui/parser/macro/macro-doc-comments-2.rs
macro_rules! inner {
    (#![$inner:meta]) => ()
}

inner! {
    /// Outer
// { dg-error "" "" { target *-*-* } .-1 }

fn main() { }

